Update: swagger spec
